fix homing buttons. issue #67
It was a CSS selector issue.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -177,11 +177,11 @@
                     </div> 
                   </div> 
                   <div class="row fabmo-status">
-                    <div class="small-3 columns"></div>
+                    <div class="small-3 columns"><span style="display:inline-block;"></span></div>
                     <div class="small-2 columns set"><span class="button-homexy"></span></div>
                     <div class="small-2 columns set"><span class="button-homez"></span></div>
                     <div class="small-2 columns set"><span class="button-probez"></span></div>
-                    <div class="small-3 columns"></div>
+                    <div class="small-3 columns"><span style="display:inline-block;"></span></div>
                   </div>            
                   </li>
               </ul>
@@ -192,13 +192,13 @@
               <ul class="off-canvas-list fabmo-file-control fabmo-status">
                 <li>
                   <div class="row">
-                    <div class="small-6 columns control">
+                    <div class="small-4 columns control">
                       <span class="fabmo-pause-button hide"><a class="small button warning ">P</a></span>
                     </div>
-                    <div class="small-6 columns control">
+                    <div class="small-4 columns control">
                       <span class="fabmo-resume-button hide"><a class="small button success ">R</a></span>
                     </div>
-                    <div class="small-6 columns control">
+                    <div class="small-4 columns control">
                       <span class="fabmo-stop-button hide"><a class="small button alert ">S</a></span>
                     </div>
                   </div>
