Work on scaling object : scale point relative to center
Will allow to calcul easy toolpath for forms filling or intersection of
shapes, based on the contour of the shape, center points, intersection
points.

--- a/dashboard/apps/2d_drawer/index.html
+++ b/dashboard/apps/2d_drawer/index.html
@@ -30,14 +30,29 @@
 
 
 					<dl class="tabs settings shapes" data-tab>
-						<dd><a href="#form-settings-panel">Settings</a></dd>
-						<dd><a href="#form-line-panel">Line</a></dd>
-						<dd><a href="#form-rectangle-panel">Rectangle</a></dd>
-						<dd><a href="#form-circle-panel">Circle</a></dd>
-						<dd><a href="#form-arc-panel">Arc</a></dd>
-						<dd><a href="#form-rotate-panel" id="rotate">Rotate</a></dd>
-						<dd><a href="#form-translate-panel" id="translate">Translate</a></dd>
-						<dd><a href="#form-mirror-panel" id="translate">Mirror</a></dd>
+						<dd><a href="#form-settings-panel"><img src="images/settings.png"/></a></dd>
+						<dd><a href="#form-line-panel"><img src="images/line.png"/></a></dd>
+						<dd><a href="#form-rectangle-panel"><img src="images/rectangle.png"/></a></dd>
+						<dd><a href="#form-circle-panel"><img src="images/circle.png"/></a></dd>
+						<dd><a href="#form-arc-panel"><img src="images/arc.png"/></a></dd>
+
+						<dd><a href="#form-rotate-panel" id="rotate"><img src="images/rotate.png"/></a></dd>
+						<dd><a href="#form-translate-panel" id="translate"><img src="images/translate.png"/></a></dd>
+						<dd><a href="#form-mirror-panel" id="mirror"><img src="images/mirrorx.png"/></a></dd>
+
+						<dd><a id="move-center"><img src="images/center.png"/></a></dd>
+						<dd><a id="move-verticaly"><img src="images/verticaly.png"/></a></dd>
+						<dd><a id="move-horizontaly"><img src="images/horizontaly.png"/></a></dd>
+
+						<dd><a id="move-left-left"><img src="images/left-left.png"/></a></dd>
+						<dd><a id="move-right-right"><img src="images/right-right.png"/></a></dd>
+						<dd><a id="move-top-top"><img src="images/top-top.png"/></a></dd>
+						<dd><a id="move-bottom-bottom"><img src="images/bottom-bottom.png"/></a></dd>
+
+						<dd><a id="move-left-right">LR</a></dd>
+						<dd><a id="move-right-left">RL</a></dd>
+						<dd><a id="move-top-bottom">TB</a></dd>
+						<dd><a id="move-bottom-top">BT</a></dd>
 					</dl>
 
 					<div class="tabs-content">
