Job Manager Fix

--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -176,7 +176,7 @@
 				var id = val._id;
 				html = [
 				'<tr><td>',
-				'<a href="#" id="' + jobid + '">',
+				'<a id="' + jobid + '">',
 					val.name,
 				'</a>',
 				'</td><td>',
