Update size of the handwheel so as to prevent scrolling

--- a/dashboard/apps/handwheel/index.html
+++ b/dashboard/apps/handwheel/index.html
@@ -6,13 +6,13 @@
 	</head>
 	<body>
 		<div style="text-align: center">
-			<h2 style="color: black">Handwheel</h2>
+			<h3 style="color: black">Handwheel</h3>
 			<p style="color: black">Click&amp;drag or touch the handwheel to drive the tool</p>
-			<canvas width="400" height="400" id="wheel"></canvas>
+			<canvas width="300" height="300" id="wheel"></canvas>
 			<br/>
-			<a class="button" id="xbutton">X</a>
-			<a class="button disabled" id="ybutton">Y</a>
-			<a class="button disabled" id="zbutton">Z</a>
+			<a class="button small" id="xbutton">X</a>
+			<a class="button small disabled" id="ybutton">Y</a>
+			<a class="button small disabled" id="zbutton">Z</a>
 		</div>
 	</body>
  
