--- a/dashboard/apps/handwheel/index.html
+++ b/dashboard/apps/handwheel/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div style="text-align: center">
-			<p style="color: black">Click&amp;drag or touch the handwheel to drive the tool</p>
+			<p style="color: black">Rotate the handwheel to drive the tool.</p>
 			<canvas width="300" height="300" id="wheel"></canvas>
 			<br/>
 			<a class="button small" id="xbutton">X</a>
