--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -86,12 +86,14 @@
                 <li><a href="#/menu" id="icon_home"><span>Home</span></a></li>
                 <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Queue</span></a></li>
                 <li><a href="#/app/file-executer" id="icon_folder"><span>Files & Code</span></a></li>
+                <li><a href="#/app/handwheel" id="icon_handwheel"><span>Handwheel</span></a></li>
+                <!--
                 <li><a href="#" id="icon_search"><span>Search</span></a></li>
                 <li><a href="#" id="icon_global"><span>MyHQ</span></a></li>
                 <li><a href="#/menu" id="icon_apps"><span>Apps</span></a></li>
                 <li><a href="#" id="icon_social"><span>Community</span></a></li>
                 <li><a href="#/app/settings" id="icon_settings"><span>Settings</span></a></li>
-                <li><a href="#/editor" id="icon_edit"><span>Edit App...</span></a></li>
+                -->
                 <li><a href="#" id="icon_colapse"><span>Collapse</span></a></li>
               </ul>
             </div>
