--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -106,7 +106,8 @@
 				<thead>
 					<tr>
 						<th class="small-3">Job Name</th>
-						<th class="small-6">Description</th>
+						<th class="small-4">Description</th>
+						<th class="small-2">State</th>
 						<th class="small-2">Run</th>
 						<th class="small-1">Duration</th>
 					</tr>
@@ -115,8 +116,6 @@
 			</table>
 		</div>
 	</section>
-
-
 
   <!-- Javascript inclusions -->
   <script src="./js/libs/jquery-1.10.2.js"></script>
@@ -131,9 +130,11 @@
   	var tool;
   	var ui;
   	var x; //SetInterval
+  	var jobs_needs_refresh = true;
+  	var current_job = null;
 
 	function refresh_jobs_list(){
-				console.log("Refreshing job list")
+		console.log("Refreshing job list")
 
 		// Load the list of files available on the tool
 		tool.list_jobs_in_queue(function(err,jobs){
@@ -181,7 +182,9 @@
 				'</a>',
 				'</td><td>',
 					val.description || 'No description.',
-				'</td><td>',
+				'</td><td><div class="job-' + val.state + '">',
+					val.state || '???',
+				'</div></td><td>',
 					moment(val.started_at).fromNow(),
 				'</td><td>',
 					moment.utc(val.finished_at-val.started_at).format('HH:mm:ss'),
@@ -241,8 +244,15 @@
 			refresh_jobs_history();
 
 			ui.on('status', function(status) {
-				console.log(status.job);
 				if(status.job) {
+					if(!current_job) {
+						current_job = status.job;
+						if(jobs_needs_refresh) {
+							refresh_jobs_list();
+							refresh_jobs_history();
+							jobs_needs_refresh = false;
+						}
+					}
 					$(".current-job-container").show(500);
 					$(".running-job-name").html(status.job.name);
 					$(".running-job-description").html(status.job.description);
@@ -254,9 +264,12 @@
 						$(".meter.progress").css("width", ((status.line/status.nb_lines)*100).toString() + "%" );
 					},1000);
 				} else {
-					refresh_jobs_list(); //to try later
-					refresh_jobs_list(); //to try later
-
+					if(current_job) {
+						current_job = null;
+						refresh_jobs_list();
+						refresh_jobs_history();
+						jobs_needs_refresh = false;
+					}
 					$(".current-job-container").hide(500);
 					clearInterval(x);
 				}
