Working status text

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -30,16 +30,9 @@
 
             <!-- ***** Machines on network Section ***** -->
             <section class="left show-for-medium-up" id="tools-container">
-              <button data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="dropdown tools-current"> 
-                <li><a href="#/refresh_machines">Refresh</a></li>
-              </button>
-              <ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true" tabindex="-1">
-                <div class="tools-other">
-                  <li><a href="#">Refresh</a></li>
-                </div>
-                <div class="tools-refresh">
-                  <li><a href="#/refresh_machines"></a></li>
-                </div>
+            <div class="fabmo-status">
+              <div class="state" style="text-transform: capitalize;"></div>
+            </div>
             </section>
 
             <!-- ***** Machines on network Widget ***** -->
