Update system apps to include most up-to-date dashboard.js

--- a/dashboard/apps/handwheel/index.html
+++ b/dashboard/apps/handwheel/index.html
@@ -17,7 +17,7 @@
  
 	<script src="./js/jquery-1.10.2.js"></script>
 	<script src="./js/foundation.min.js"></script>
-	<script src="./js/dashboard.js"></script>
+	<script src="/js/libs/dashboard.js"></script>
 	<script src="./js/handwheel.js"></script>
 
 	<script type="text/javascript">
