--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -122,7 +122,7 @@
   <script src="./js/libs/foundation.min.js"></script>
   <script src="./js/FabMo-latest.js"></script>
   <script src="./js/FabMoUI-latest.js"></script>
-  <script src="./js/dashboard.js"></script>
+  <script src="/js/libs/dashboard.js"></script>
   <script src="./js/moment.js"></script>
   <!--<script src="./js/app.js"></script>-->
 
