Fix stylesheet.  Closes #71

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -21,6 +21,12 @@
           <!-- New nav work -->
           <!-- Nav-Bar & Buttons for sliding menus -->
           <nav class="tab-bar">
+
+            <section class="left show-for-medium-up fabmo-status" id="left-position-container">
+                            <div class="small-6 columns">
+              <div class="state"></div>
+              </div>
+            </section>
  
             <!-- ***** Left-Menu Button Section ***** -->
             <section class="left-small left show-for-small-only">
