--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -50,9 +50,7 @@
             </section>
           </nav>
 
-          <!-- 
-              Sliding Wiget Menu (fix for large screen)
-          -->
+          <!-- Sliding Wiget Menu (fix for large screen) -->
           <aside class="left-off-canvas-menu colapsed" id="left-menu">
 
             <!-- ********** Links Widget ********** -->
@@ -63,7 +61,8 @@
                 <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Queue</span></a></li>
                 <li><a href="#/app/handwheel" id="icon_handwheel"><span>Handwheel</span></a></li>
                 <li><a href="#/app/app-manager" id="icon_apps"><span>App Manager</span></a></li>
-                <li><a href="log" id="icon_settings"><span>Log (Debug)</span></a></li>
+                <li><a href="log" id="icon_log"><span>Log (Debug)</span></a></li>
+                <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
 
                 <!--
                 <li><a href="#/app/file-executer" id="icon_folder"><span>Files & Code</span></a></li>
